--- a/package.yaml
+++ b/package.yaml
@@ -19,5 +19,12 @@ dependencies:
 - polysemy-plugin
 - polysemy-zoo
 
+ghc-options:
+- -Wall
+- -Wcompat
+- -Wincomplete-record-updates
+- -Wincomplete-uni-patterns
+- -Wredundant-constraints
+
 library:
   source-dirs: src
