--- a/package.yaml
+++ b/package.yaml
@@ -15,6 +15,7 @@ category:            Polysemy
 
 dependencies:
 - base >= 4.7 && < 5
+- co-log-polysemy
 - polysemy
 - polysemy-plugin
 - polysemy-zoo
