--- a/polysemy-methodology.cabal
+++ b/polysemy-methodology.cabal
@@ -5,7 +5,7 @@ cabal-version: 1.12
 -- see: https://github.com/sol/hpack
 
 name:           polysemy-methodology
-version:        0.1.7.0
+version:        0.1.8.0
 synopsis:       Domain modelling algebra for polysemy
 category:       Polysemy
 author:         Daniel Firth
@@ -33,7 +33,7 @@ library
   build-depends:
       base >=4.7 && <5
     , co-log-polysemy
-    , polysemy
+    , polysemy >=1.3.0.0 && <1.5
     , polysemy-plugin
-    , polysemy-zoo
+    , polysemy-zoo >=0.7.0.1 && <0.8
   default-language: Haskell2010
