--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name:                polysemy-methodology
-version:             0.1.8.0
+version:             0.2.0.0
 license:             MIT
 git:                 https://gitlab.com/homotopic-tech/polysemy-methodology
 author:              "Daniel Firth"
@@ -14,11 +14,11 @@ synopsis:            Domain modelling algebra for polysemy
 category:            Polysemy
 
 dependencies:
-- base >= 4.7 && < 5
-- co-log-polysemy
-- polysemy >= 1.3.0.0 && < 1.5
-- polysemy-plugin
-- polysemy-zoo >= 0.7.0.1 && < 0.8
+- base >= 4.7 && < 4.16
+- polysemy >= 1.3.0.0 && < 1.7
+- polysemy-kvstore >= 0.1.2.0 && < 0.2
+- polysemy-plugin >= 0.3 && < 0.5
+- polysemy-several >= 0.1 && < 0.2
 
 ghc-options:
 - -Wall
