--- a/polysemy-methodology.cabal
+++ b/polysemy-methodology.cabal
@@ -1,11 +1,11 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.2.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 
 name:           polysemy-methodology
-version:        0.1.8.0
+version:        0.2.0.0
 synopsis:       Domain modelling algebra for polysemy
 category:       Polysemy
 author:         Daniel Firth
@@ -31,9 +31,9 @@ library
       src
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
-    , co-log-polysemy
-    , polysemy >=1.3.0.0 && <1.5
-    , polysemy-plugin
-    , polysemy-zoo >=0.7.0.1 && <0.8
+      base >=4.7 && <4.16
+    , polysemy >=1.3.0.0 && <1.7
+    , polysemy-kvstore >=0.1.2.0 && <0.2
+    , polysemy-plugin >=0.3 && <0.5
+    , polysemy-several ==0.1.*
   default-language: Haskell2010
