--- a/stack.yaml
+++ b/stack.yaml
@@ -1,8 +1,5 @@
-resolver: nightly-2020-10-28
+resolver: nightly-2021-07-23
 packages:
 - .
 extra-deps:
-- compact-0.2.0.0
-- polysemy-plugin-0.2.5.1
-- polysemy-zoo-0.7.0.1
-- ghc-tcplugins-extra-0.3.2
+- polysemy-several-0.1.0.0
